# RUSTIIIIIProject

./: Cargo.toml  README.md
src/: decoder.rs  images.rs  lib.rs  main.rs  pixel.rs  ppma_io.c
src/images/: picture_P3.ppm  picture_P3_gray_scale.ppm  picture_P3_inverted.ppm
